# cross-media-measurement

./: .bazelignore  .bazelrc  .codecov.yml  .editorconfig  .env  .eslintrc.json  .gitignore  .lintignore  .prettierrc.js  90day_1billion_bench.sh  90day_60m_bench.sh  AGENTS.md  AUTHORS  BUILD.bazel  CONTRIBUTING.md  CPPLINT.cfg  DIRECT_MEASUREMENT_STRATEGY.md  DOCUMENTATION_SUMMARY.md  Dockerfile  Dockerfile.bm  MODULE.bazel  README.md  SECURITY.md  WORKSPACE  api-linter.yaml  babel.configs.js  bazel_downloader.cfg  bench.sh  bench_data_spec_2025.textproto  benchmark-2edp.sh  benchmark-single-experiement.sh  benchmark-tro.sh  benchmarking_auto_execution.py  build.gradle.kts  cleanup.sh  config-overrides.js  container.bazelrc  cosign-release-pub-key.pem  cosign-test-pub-key.pem  dataavailabilitysync_dashboard.json  (+55 more)
measurement/api/v1alpha/: BUILD.bazel  advertiser.proto  data_provider.proto  metric.proto  publisher_data_service.proto  registration_service.proto  requisition.proto  requisition_service.proto  sketch.proto
src/: BUILD.bazel
src/main/db/gcp/: BUILD  BUILD.bazel  README.md  computation_stats.sdl  computations.sdl  kingdom.sdl  measurement_provider.sdl  metric_values.sdl
src/main/docker/: BUILD.bazel  README.md  constants.bzl  create_ecr_repo.sh  defs.bzl  deploy_to_kind.yaml  images.bzl  java_image_base_nonroot.bzl  macros.bzl  sign_images.bzl  sign_images.sh.template  signed_images.bzl
src/main/docker/base/: BUILD.bazel  README.md
src/main/docker/bazel/: BUILD.bazel  README.md  bazel.gpg  bazel.list
src/main/docker/panel_exchange_client/: BUILD.bazel  images.bzl
src/main/docker/prow/: BUILD.bazel  google-cloud-sdk.list
src/main/docker/rbe/: BUILD.bazel  README.md
src/main/go/reporting/: BUILD.bazel  grpcgateway.go
src/main/k8s/: BUILD.bazel  README.md  base.cue  config.cue  control_plane.cue  correctness_test_job.cue  deploy_to_kind.yaml  duchy.cue  duchy_id_config.textproto  duchy_public_key_config.textproto  duchy_rpc_config.textproto  edp_aggregator.cue  edp_simulator.cue  frontend_simulator.cue  grafana.cue  k8s.cue  kingdom.cue  kingdom_and_single_duchy.cue  kingdom_and_single_duchy.yaml  kingdom_and_single_duchy_from_cue.yaml  kingdom_and_three_duchies.cue  kingdom_and_three_duchies_gke.cue  kingdom_and_three_duchies_local.cue  kustomization.cue  liquid_legions_v2_noise_config.textproto  macros.bzl  measurement_system_prober.cue  non_aggregator_protocols_setup_config.textproto  open_telemetry.cue  open_telemetry_collector.cue  open_telemetry_collector_sidecar.cue  openssl.cnf  panel_match_resource_setup.cue  population_requisition_fulfiller.cue  postgres.cue  postgres_duchy.cue  public_api_protocol_configs.textproto  reporting.cue  reporting_simulator.cue  reporting_v2.cue  (+5 more)
src/main/k8s/certs/: BUILD.bazel  README.md  aggregator.key  aggregator.pem  all_root_certs.pem  edp1_enc_private.der  edp1_root.key  edp1_tls.pem  edp2_cs_cert.der  edp2_root.pem  edp3_cs_cert.der  edp3_enc_private.der  edp4_enc_public.der  edp4_tls.pem  edp6_enc_private.der  edp6_tls.key  kustomization.yaml  mc_cs_cert.der  mc_tls.pem  worker1_root.pem  worker2_cs_cert.der  worker2_cs_private.der  worker_1.pem  worker_1_cs_cert.der  worker_1_cs_private.der  worker_1_tls.key  worker_2.key  worker_2.pem  worker_2_root.key
src/main/k8s/configs/: BUILD.bazel  aggregator_protocols_setup_config.textproto  duchy_id_config.textproto  duchy_rpc_config.textproto  non_aggregator_protocols_setup_config.textproto  public_api_protocol_configs.textproto
src/main/k8s/dev/: BUILD.bazel  README.md  aggregator_secret_kustomization.tmpl.yaml  base_eks.cue  base_gke.cue  bigquery_edp_simulator_gke.cue  config.cue  config_eks.cue  config_files_kustomization.yaml  config_gke.cue  control_plane_gke.cue  duchy_aws_eks.cue  duchy_eks.cue  duchy_gke.cue  duchy_secret_kustomization.tmpl.yaml  edp7_tls_kustomization.yaml  edp_aggregator_config_kustomization.yaml  edp_aggregator_gke.cue  edp_aggregator_secret_kustomization.yaml  edp_aggregator_tls_kustomization.yaml  edp_simulator_gke.cue  edp_simulators_gke.cue  frontend_simulator_gke.cue  grafana_gke.cue  kingdom_config_files_kustomization.yaml  kingdom_dev_gke.cue  kingdom_gke.cue  kingdom_secret_kustomization.yaml  measurement_system_prober.cue  measurement_system_prober_gke.cue  measurement_system_prober_secret_kustomization.yaml  non_aggregator_secret_kustomization.tmpl.yaml  open_telemetry_eks.cue  open_telemetry_gke.cue  open_telemetry_gke_spanner.cue  panel_match_resource_setup_gke.cue  pdp_tls_kustomization.yaml  population_requisition_fulfiller_gke.cue  prometheus_gke.cue  reporting_config_files_kustomization.yaml  (+11 more)
src/main/k8s/local/: BUILD.bazel  README.md  build_authority_key_identifier_to_principal_map.py  config.cue  config_files_kustomization.yaml  db_creds_kustomization.yaml  duchies.cue  edp_simulator.cue  edp_simulators.cue  edp_simulators_csv.cue  empty_metric_spec_config.textproto  emulators.cue  encryption_key_pair_config.tmpl.textproto  frontend_simulator.cue  get_resource_ids.sh  grafana.cue  kind_halo_launcher.sh  kingdom.cue  mc_config_kustomization.yaml  measurement_consumer_config.tmpl.textproto  measurement_spec_config.textproto  measurement_system_prober.cue  metric_spec_config.textproto  open_id_providers_config.json  open_telemetry.cue  open_telemetry_collector.cue  panelmatch_emulators.cue  pdp_config_kustomization.yaml  postgres_database.cue  (+8 more)
src/main/proto/: api-linter.yaml
src/main/python/: BUILD.bazel  __init__.py  main.py  planning_models_service.py  requirements_lock.txt
src/main/terraform/: README  db.tf  halo,properties  kms.tf  main.tf  network.tf  packages.sh  regist.tf  variables.tf
src/noiseninja/: solver.py
src/report/: report.py
src/tools/: correctoriginreport.py
tools/: BUILD.bazel  EventGroupManager.kt  PopulationSpecConverterTool.kt  api-lint  bazel-container  bazel-container-run  bazel-docker  clang.env.json  gen-rbe-configs  generate_plantuml_diagrams.sh  run-reach-frequency.sh
tools/integer-ids/: README.md  api-to-external  external-to-api
tools/prow/: bazel_test.sh  lint.sh
(+8351 files in other folders)
