load("@bazel_gazelle//:def.bzl", "gazelle")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config")
load("@aspect_rules_js//npm:defs.bzl", "npm_link_package")


package(default_visibility = ["//:__subpackages__"])

# This is completely unintuitive. The Bazel rules for Docker require this.
# https://github.com/bazelbuild/bazel-gazelle/issues/609
gazelle(name = "gazelle")

npm_link_all_packages()

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
)

npm_link_package(
    name = 'link',
    src = '//src/main/react/reporting-ui-component-library',
    visibility = [
        "//visibility:public",
    ],
)
