load("@bazel_gazelle//:def.bzl", "gazelle")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@aspect_rules_js//js:defs.bzl", "js_library")

package(default_visibility = ["//:__subpackages__"])

# This is completely unintuitive. The Bazel rules for Docker require this.
# https://github.com/bazelbuild/bazel-gazelle/issues/609
gazelle(name = "gazelle")

npm_link_all_packages()

js_library(
    name = "babel_config",
    srcs = ["babel.config.js"],
)

js_library(
    name = "tsconfig",
    srcs = ["tsconfig.json"],
)