load("@bazel_gazelle//:def.bzl", "gazelle")
load("@rules_python//python:pip.bzl", "compile_pip_requirements")

package(default_visibility = ["//:__subpackages__"])

# This is completely unintuitive. The Bazel rules for Docker require this.
# https://github.com/bazelbuild/bazel-gazelle/issues/609
gazelle(name = "gazelle")

compile_pip_requirements(
    name = "requirements",
    src = "pyproject.toml",
    requirements_txt = "requirements_lock.txt",
    tags = ["manual"],
)
