module(
    name = "cross-media-measurement-system",
    repo_name = "wfa_measurement_system",
)

BORINGSSL_VERSION = "0.20241209.0"

# Version of Apache Beam.
#
# Version compatibility info:
# * https://cloud.google.com/dataflow/docs/guides/installing-beam-sdk
# * https://cloud.google.com/dataflow/docs/support/sdk-version-support-status#apache-beam-2.x-sdks
# * https://beam.apache.org/documentation/runners/flink/#flink-version-compatibility
# * https://docs.aws.amazon.com/kinesisanalytics/latest/java/earlier.html
APACHE_BEAM_VERSION = "2.45.0"

K8S_CLIENT_VERSION = "21.0.1"

PYTHON_VERSION = "3.11"

#  --- WFA registry modules. ---

# Must come before rules_kotlin due to toolchain resolution precedence.
# See https://github.com/bazelbuild/bazel/discussions/23075.
bazel_dep(
    name = "rules_kotlin_jvm",
    version = "0.12.0",
    repo_name = "wfa_rules_kotlin_jvm",
)
bazel_dep(
    name = "rules_swig",
    version = "0.1.0",
    repo_name = "wfa_rules_swig",
)
bazel_dep(
    name = "rules_cue",
    version = "0.4.1",
    repo_name = "wfa_rules_cue",
)
bazel_dep(
    name = "common-jvm",
    version = "0.135.0",
    repo_name = "wfa_common_jvm",
)
bazel_dep(
    name = "common-cpp",
    version = "0.14.0",
    repo_name = "wfa_common_cpp",
)
bazel_dep(
    name = "cross-media-measurement-api",
    version = "0.89.0",
    repo_name = "wfa_measurement_proto",
)
bazel_dep(
    name = "consent-signaling-client",
    version = "0.23.0",
    repo_name = "wfa_consent_signaling_client",
)
bazel_dep(
    name = "any-sketch",
    version = "0.10.0",
    repo_name = "any_sketch",
)
bazel_dep(
    name = "any-sketch-java",
    version = "0.8.0",
    repo_name = "any_sketch_java",
)
bazel_dep(
    name = "googleapis",
    version = "0.0.0-20251127-8cd3749f",
    repo_name = "com_google_googleapis",
)
bazel_dep(
    name = "private-join-and-compute",
    version = "0.0.0-20230417-e028e59",
    repo_name = "com_google_private_join_and_compute",
)
bazel_dep(
    name = "virtual-people-common",
    version = "0.5.0",
    repo_name = "wfa_virtual_people_common",
)
bazel_dep(
    name = "grpc_ecosystem_grpc_gateway",
    version = "2.26.0.bzlmod.1",
)
bazel_dep(
    name = "cloud-spanner-emulator-bin",
    version = "1.5.37.libcxx.1",
    repo_name = "cloud_spanner_emulator",
)
bazel_dep(
    name = "shell-encryption",
    version = "0.0.0-20241214-b381c4e",
    repo_name = "com_github_google_shell",
)

# --- Bazel Central Registry modules. ---

# TODO(bazelbuild/bazel-worker-api#10): Remove this once rules_kotlin stops using version 0.0.4
bazel_dep(
    name = "bazel_worker_java",
    version = "0.0.5",
)
bazel_dep(
    name = "platforms",
    version = "1.0.0",
)
bazel_dep(
    name = "bazel_skylib",
    version = "1.8.2",
)
bazel_dep(
    name = "rules_proto",
    version = "7.1.0",
)
bazel_dep(
    name = "rules_cc",
    version = "0.2.14",
)
bazel_dep(
    name = "rules_pkg",
    version = "1.0.1",
)
bazel_dep(
    name = "rules_go",
    version = "0.53.0",
    repo_name = "io_bazel_rules_go",
)
bazel_dep(
    name = "gazelle",
    version = "0.47.0",
    repo_name = "bazel_gazelle",
)
bazel_dep(
    name = "rules_java",
    version = "8.15.2",
)
bazel_dep(
    name = "rules_jvm_external",
    version = "6.8",
)
bazel_dep(
    name = "rules_python",
    version = "1.7.0",
)
bazel_dep(
    name = "grpc",
    version = "1.74.1",
)

# Must be compatible with the protobuf version declared in requirements.txt
bazel_dep(
    name = "protobuf",
    version = "33.1",
    repo_name = "com_google_protobuf",
)
bazel_dep(
    name = "abseil-cpp",
    version = "20250814.0",
    repo_name = "com_google_absl",
)
bazel_dep(
    name = "googletest",
    version = "1.17.0",
    repo_name = "com_google_googletest",
)
bazel_dep(
    name = "glog",
    version = "0.7.1",
    repo_name = "com_github_google_glog",
)
bazel_dep(
    name = "boringssl",
    version = BORINGSSL_VERSION,
)
bazel_dep(
    name = "bazel_jar_jar",
    version = "0.1.7",
)
bazel_dep(
    name = "riegeli",
    version = "0.0.0-20250822-9f2744d",
    repo_name = "com_google_riegeli",
)
bazel_dep(
    name = "tink_cc",
    version = "2.1.3",
)
bazel_dep(
    name = "rules_oci",
    version = "2.2.1",
)
single_version_override(
    module_name = "rules_oci",
    patch_strip = 1,
    patches = [
        "//build/cosign/patches:sign_dot_bzl.patch",
    ],
)

bazel_dep(
    name = "rules_multirun",
    version = "0.12.0",
)

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.artifact(
    artifact = "beam-runners-google-cloud-dataflow-java",
    exclusions = ["org.apache.beam:beam-sdks-java-io-kafka"],
    group = "org.apache.beam",
)
maven.artifact(
    artifact = "beam-sdks-java-io-google-cloud-platform",
    exclusions = [
        # Prevent netty-tcnative being used instead of Conscrypt.
        "io.netty:netty-tcnative-boringssl-static",
    ],
    group = "org.apache.beam",
)
maven.install(
    artifacts = [
        "com.google.crypto.tink:tink-awskms:1.11.0",
        "com.google.crypto.tink:tink-gcpkms:1.9.0",
        "com.squareup.okhttp3:okhttp",
        "com.squareup.okhttp3:okhttp-tls",
        "com.google.privacy.differentialprivacy:differentialprivacy:4.0.0",

        # OpenTelemetry SDK metrics (sdk is available from common-jvm, but sdk-metrics is not exposed)
        "io.opentelemetry:opentelemetry-sdk-metrics",
        "io.opentelemetry:opentelemetry-sdk-logs",
        "io.opentelemetry:opentelemetry-sdk-extension-autoconfigure",

        # OpenTelemetry instrumentation (only alpha versions available)
        "io.opentelemetry.instrumentation:opentelemetry-grpc-1.6:2.0.0-alpha",
        "io.opentelemetry.instrumentation:opentelemetry-runtime-telemetry-java8:2.0.0-alpha",
        "io.opentelemetry.instrumentation:opentelemetry-java-http-client:2.0.0-alpha",
        "io.opentelemetry.semconv:opentelemetry-semconv:1.28.0-alpha",

        # Google Cloud OpenTelemetry exporters
        "com.google.cloud.opentelemetry:exporter-metrics:0.36.0",
        "com.google.cloud.opentelemetry:exporter-trace:0.36.0",
        "com.google.cloud.opentelemetry:exporter-auto:0.36.0-alpha",

        # OpenTelemetry logging exporter (console/stdout - Google Cloud will collect from stdout)
        "io.opentelemetry:opentelemetry-exporter-logging",
        "io.opentelemetry:opentelemetry-extension-kotlin",
        "io.kubernetes:client-java:" + K8S_CLIENT_VERSION,
        "io.kubernetes:client-java-extended:" + K8S_CLIENT_VERSION,
        "joda-time:joda-time:2.10.10",
        "org.slf4j:slf4j-simple:1.7.32",
        "it.unimi.dsi:fastutil:8.5.12",

        # Google Cloud
        "com.google.cloud:google-cloud-bigquery:2.51.0",
        "com.google.apis:google-api-services-bigquery:v2-rev20250511-2.0.0",
        "com.google.cloud:google-cloud-bigquerystorage",
        "com.google.cloud:google-cloud-security-private-ca",
        "com.google.cloud.functions.invoker:java-function-invoker:1.4.0",
        "com.google.cloud:google-cloud-secretmanager",
        "com.google.cloud:google-cloud-logging",
        # TODO(googleapis/java-cloud-bom#5279): Remove when managed by BOM.
        "com.google.apis:google-api-services-storage:v1-rev20240706-2.0.0",

        # AWS
        "software.amazon.awssdk:acmpca",

        # Apache Beam
        "org.apache.beam:beam-runners-direct-java",
        "org.apache.beam:beam-runners-spark",
        "org.apache.beam:beam-sdks-java-core",

        # CEL
        "org.projectnessie.cel:cel-core",
        "org.projectnessie.cel:cel-generated-pb",

        # Bouncy Castle
        "org.bouncycastle:bcpkix-jdk18on:1.79",

        # Apache Commons Math/Numbers
        "org.apache.commons:commons-numbers-core",
        "org.apache.commons:commons-numbers-gamma",
        "org.apache.commons:commons-math3:3.6.1",
    ],
    boms = [
        "com.squareup.okhttp3:okhttp-bom:4.12.0",
        "org.apache.beam:beam-sdks-java-bom:" + APACHE_BEAM_VERSION,
        "org.projectnessie.cel:cel-bom:0.5.0",
        "org.apache.commons:commons-numbers-bom:1.2",
    ],
    fail_if_repin_required = True,
    fetch_sources = True,  # For IDE integration.
    known_contributing_modules = [
        "any-sketch-java",
        "bazel_worker_java",
        "common-jvm",
        "consent-signaling-client",
        "cross-media-measurement-system",
        "protobuf",
        "rules_kotlin_jvm",
        "virtual-people-common",
    ],
    lock_file = "//:maven_install.json",
    resolver = "maven",
    strict_visibility = True,
)
use_repo(maven, "maven")

go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(
    goarch = "amd64",
    goos = "linux",
    version = "1.24.11",
)

GO_GENPROTO_VERSION = "v0.0.0-20251124214823-79d6a2a48846"

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.module(
    path = "github.com/golang/glog",
    sum = "h1:CNNw5U8lSiiBk7druxtSHHTsRWcxKoac6kZKm2peBBc=",
    version = "v1.2.4",
)
go_deps.module(
    path = "google.golang.org/genproto",
    sum = "h1:dDbsTLIK7EzwUq36kCSAsk0slouq/S0tWHeeGi97cD8=",
    version = GO_GENPROTO_VERSION,
)
go_deps.module(
    path = "google.golang.org/genproto/googleapis/api",
    sum = "h1:ZdyUkS9po3H7G0tuh955QVyyotWvOD4W0aEapeGeUYk=",
    version = GO_GENPROTO_VERSION,
)
go_deps.module(
    path = "google.golang.org/genproto/googleapis/rpc",
    sum = "h1:Wgl1rcDNThT+Zn47YyCXOXyX/COgMTIdhJ717F0l4xk=",
    version = GO_GENPROTO_VERSION,
)
go_deps.module(
    path = "google.golang.org/grpc",
    sum = "h1:MF5TftSMkd8GLw/m0KM6V8CMOCY6NZ1NQDPGFgbTt4A=",
    version = "v1.69.4",
)
go_deps.module(
    path = "cloud.google.com/go/longrunning",
    sum = "h1:3tyw9rO3E2XVXzSApn1gyEEnH2K9SynNQjMlBi3uHLg=",
    version = "v0.6.4",
)
use_repo(
    go_deps,
    "com_github_golang_glog",
    "com_google_cloud_go_longrunning",
    "org_golang_google_genproto",
    "org_golang_google_genproto_googleapis_api",
    "org_golang_google_genproto_googleapis_rpc",
    "org_golang_google_grpc",
)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.defaults(python_version = PYTHON_VERSION)
python.toolchain(
    configure_coverage_tool = True,
    # Allow containerized builds using rootless Docker.
    # See https://github.com/bazelbuild/rules_python/pull/713#issuecomment-1885628496
    ignore_root_user_error = True,
    python_version = PYTHON_VERSION,
)
use_repo(python, "python_" + PYTHON_VERSION.replace(".", "_"))

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    experimental_index_url = "https://pypi.org/simple",
    hub_name = "pip",
    python_version = PYTHON_VERSION,
    requirements_lock = "//:requirements_lock.txt",
)
use_repo(pip, "pip")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "go_image_base",
    # Digest of `nonroot` tag.
    digest = "sha256:cd961bbef4ecc70d2b2ff41074dd1c932af3f141f2fc00e4d91a03a832e3a658",
    image = "gcr.io/distroless/base-debian12",
    platforms = ["linux/amd64"],
)
oci.pull(
    name = "py_image_base",
    # Digest of `nonroot` tag.
    digest = "sha256:498e3cb48826d99bad1301994da60caa126b25c0ce03dc4e6a47a7c10fe02493",
    image = "gcr.io/distroless/python3-debian12",
    platforms = ["linux/amd64"],
)

# TODO(world-federation-of-advertisers/cross-media-measurement#2729): Remove root Java image when Confidential Spaces properly supports nonroot images.
oci.pull(
    name = "java_image_base_root",
    # Digest of `latest` tag.
    digest = "sha256:fd925ba431f3a6c1f1c8114ce1999ca38803220baf0fdf25a4c71b38db8af67f",
    image = "gcr.io/distroless/java17-debian12",
    platforms = ["linux/amd64"],
)
use_repo(
    oci,
    "go_image_base",
    "go_image_base_linux_amd64",
    "java_image_base_root",
    "java_image_base_root_linux_amd64",
    "py_image_base",
    "py_image_base_linux_amd64",
)

# TODO(bazel-contrib/rules_oci#235): Replace this custom extension once rules_oci adds blzmod support for cosign.
cosign = use_extension("//build/cosign:extensions.bzl", "cosign")
use_repo(cosign, "oci_cosign_toolchains")

register_toolchains("@oci_cosign_toolchains//:all")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "private_membership",
    sha256 = "b1e0e7f74f4da09a6011c6fa91d7b968cdff6bb571712490dae427704b2af14c",
    strip_prefix = "private-membership-84e45669f7357bffcdafbc1b0cc26e72512808ce",
    url = "https://github.com/google/private-membership/archive/84e45669f7357bffcdafbc1b0cc26e72512808ce.zip",
)

http_archive(
    name = "uk_pilot_event_templates",
    sha256 = "e5d9cb0f6087b6286f5bfeb053a968870c88c27fa7a5dc40055ae7681dad9b2c",
    strip_prefix = "uk-pilot-event-templates-0.2.0",
    url = "https://github.com/world-federation-of-advertisers/uk-pilot-event-templates/archive/refs/tags/v0.2.0.tar.gz",
)

# Force use of newer version of boringssl.
single_version_override(
    module_name = "boringssl",
    version = BORINGSSL_VERSION,
)
