[build-system]
requires = [
    "setuptools == 80.9.0",
]

[project]
name = "halo-cmm"
version = "0.0.0"
dependencies = [
    "absl-py",
    "google-api-core",
    "google-cloud-storage",
    # Must be compatible with the version of the grpc Bazel module.
    "grpcio==1.74.0",
    # Must be compatible with the version of the protobuf Bazel module.
    "protobuf==6.33.1",
    "numpy",
    "qpsolvers[highs,osqp]",
]

[tool.pyink]
line-length = 80
unstable = true
target-version = []
pyink-indentation = 4
pyink-use-majority-quotes = true
pyink-annotation-pragmas = [
  "noqa",
  "pylint:",
  "type: ignore",
  "pytype:",
  "mypy:",
  "pyright:",
  "pyre-",
]
