[build-system]
requires = [
    "setuptools == 80.9.0",
]

[project]
name = "halo-cmm"
version = "0.0.0"
dependencies = [
    "absl-py",
    "google-api-core",
    "google-cloud-storage",
    # For google.rpc.error_details / google.rpc.status
    "googleapis-common-protos",
    # Must be compatible with the version of the grpc Bazel module.
    "grpcio==1.74.0",
    # ErrorInfo extraction from grpc.RpcError trailers; must match grpcio.
    "grpcio-status==1.74.0",
    # Must be compatible with the version of the protobuf Bazel module.
    "protobuf==6.33.6",
    "numpy",
    "qpsolvers[highs,osqp]",
]

[tool.pyink]
line-length = 80
unstable = true
target-version = []
pyink-indentation = 4
pyink-use-majority-quotes = true
pyink-annotation-pragmas = [
  "noqa",
  "pylint:",
  "type: ignore",
  "pytype:",
  "mypy:",
  "pyright:",
  "pyre-",
]
