package(default_visibility = [":__subpackages__"])

package_group(
    name = "jvm_test",
    packages = [
        "//src/test/java/...",
        "//src/test/kotlin/...",
    ],
)

package_group(
    name = "jvm",
    includes = [":jvm_test"],
    packages = [
        "//src/main/java/...",
        "//src/main/kotlin/...",
    ],
)

package_group(
    name = "internal_services",
    packages = [
        "//src/main/kotlin/org/wfanet/measurement/service/internal/...",
        "//src/test/kotlin/org/wfanet/measurement/service/internal/...",
    ],
)
