load("@rules_java//java:defs.bzl", "java_binary")
load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_library")

package(default_visibility = ["//visibility:public"])

kt_jvm_library(
    name = "event_group_manager_lib",
    testonly = True,
    srcs = ["EventGroupManager.kt"],
    deps = [
        "//imports/java/com/google/crypto/tink/integration/gcpkms",
        "//src/main/proto/wfa/measurement/edpaggregator/eventgroups/v1alpha:event_group_kt_jvm_proto",
        "//src/main/proto/wfa/measurement/edpaggregator/eventgroups/v1alpha:event_group_map_kt_jvm_proto",
        "//src/main/proto/wfa/measurement/api/v2alpha/event_templates/testing:test_event_kt_jvm_proto",
        "//src/main/proto/wfa/measurement/edpaggregator/v1alpha:blob_details_kt_jvm_proto",
        "@com_google_protobuf//:protobuf_java",
        "@com_google_protobuf//:protobuf_java_util",
        "@wfa_common_jvm//imports/java/com/google/cloud/storage",
        "@wfa_common_jvm//imports/java/com/google/protobuf",
        "@wfa_common_jvm//imports/java/picocli",
        "@wfa_common_jvm//imports/kotlin/kotlinx/coroutines:core",
        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common",
        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/gcloud/gcs",
        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/storage:client",
        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/storage:mesos_recordio_storage_client",
        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/storage:selected_storage_client",
        "//src/main/kotlin/org/wfanet/measurement/edpaggregator:storage_config",
        "//src/main/kotlin/org/wfanet/measurement/edpaggregator/resultsfulfiller:storage_event_reader",
    ],
)

java_binary(
    name = "event_group_manager",
    testonly = True,
    main_class = "org.wfanet.measurement.tools.EventGroupManager",
    runtime_deps = [":event_group_manager_lib"],
)

kt_jvm_library(
    name = "population_spec_converter_tool_lib",
    testonly = True,
    srcs = ["PopulationSpecConverterTool.kt"],
    deps = [
        "//src/main/kotlin/org/wfanet/measurement/loadtest/dataprovider:population_spec_converter",
        "//src/main/proto/wfa/measurement/api/v2alpha:population_spec_kt_jvm_proto",
        "//src/main/proto/wfa/measurement/api/v2alpha/event_group_metadata/testing:simulator_synthetic_data_spec_kt_jvm_proto",
        "//src/main/proto/wfa/measurement/api/v2alpha/event_templates/testing:test_event_kt_jvm_proto",
        "@com_google_protobuf//:protobuf_java",
        "@com_google_protobuf//:protobuf_java_util",
        "@wfa_common_jvm//imports/java/com/google/protobuf",
        "@wfa_common_jvm//imports/java/picocli",
        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common",
    ],
)

java_binary(
    name = "population_spec_converter_tool",
    testonly = True,
    main_class = "org.wfanet.measurement.tools.PopulationSpecConverterTool",
    runtime_deps = [":population_spec_converter_tool_lib"],
)
