load("@rules_java//java:defs.bzl", "java_binary")
load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_library")

package(default_visibility = ["//visibility:public"])

kt_jvm_library(
    name = "event_group_manager_lib",
    srcs = ["EventGroupManager.kt"],
    deps = [
        "//src/main/proto/wfa/measurement/edpaggregator/eventgroups/v1alpha:event_group_kt_jvm_proto",
        "//src/main/proto/wfa/measurement/edpaggregator/eventgroups/v1alpha:event_group_map_kt_jvm_proto",
        "@com_google_protobuf//:protobuf_java",
        "@com_google_protobuf//:protobuf_java_util",
        "@wfa_common_jvm//imports/java/com/google/cloud/storage",
        "@wfa_common_jvm//imports/java/com/google/protobuf",
        "@wfa_common_jvm//imports/java/picocli",
        "@wfa_common_jvm//imports/kotlin/kotlinx/coroutines:core",
        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common",
        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/gcloud/gcs",
        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/storage:client",
        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/storage:mesos_recordio_storage_client",
        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/storage:selected_storage_client",
    ],
)

java_binary(
    name = "event_group_manager",
    main_class = "org.wfanet.measurement.tools.EventGroupManager",
    runtime_deps = [":event_group_manager_lib"],
)
